  functions if "zend" is specified as the module name. (Ilia)
- Changed is_executable() to be available also on Windows. (Shane)
- Changed array_search() to accept also objects as a needle. (Moriyoshi)
- Changed ext/mcrypt to require libmcrypt version 2.5.6 or greater. (Derick)
- Changed uniqid() parameters to be optional and allow any prefix length. (Marcus)
- Added context options to http_fopen_wrapper 'method', 'header', 'content'. (Sara)
- Added domdocument->create_document_fragment() and documentfragment->open_mem() 
  methods to domxml. (Rob Richards, Chregu)
- Added domelement->set_attribute_node() method (bug #17638). (Rob Richards)
- Added optional parameter to get_browser() to make it return an array. (Jay)
- Added optional parameter to openssl_sign() to specify the hashing algorithm.
  (scott@planetscott.ca, Derick)
- Added file_put_contents() function. (Sterling)
- Added "mail_force_extra_paramaters" php.ini option which forces the addition 
  of the specified parameters to be passed as extra parameters to the sendmail 
  binary. These parameters will always replace the value of the 5th parameter
  to mail(), even in safe mode. (Derick)
- Added new "transport" layer for sockets and associated functions. (Wez)
  . stream_socket_client() - similar to fsockopen(), but more powerful.
  . stream_socket_server() - Creates a server socket.
  . stream_socket_accept() - Accept a client connection.
  . stream_socket_get_name() - Get local or remote name of socket.
  . generic crypto interface for streams (supports dynamic loading of OpenSSL)
- Added stream_copy_to_stream() function. (Wez)
- Added memory mapping support under win32 to improve performance of
  readfile(), fpassthru() and some internal streams operations. (Wez)
- Added DBA handler 'inifile' to support ini files. (Marcus)
- Added input filter support. See README.input_filter. (Rasmus)
- Added "session.hash_function" and "session.hash_bits_per_character". (Sascha)